# webScrappingAmazon

./: Dockerfile  WebScrappingAmazon.py  amazon_processing.py  flipkart_processing.py  main.py  models.py  nykaa_processing.py  product_data_handler.py  pyproject.toml  url.txt  webSrapping.py
Data/: HistoricalData.xlsx  available_products.json  user_data.json
