[tool.poetry]
name = "webscrappingamazon"
version = "0.1.0"
description = ""
authors = ["ishmeet-grayopusq <120010191+ishmeet-grayopusq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "38.0.4"
fastapi = "^0.92.0"
pandas = "^1.5.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
uvicorn = "^0.20.0"
bs4 = "^0.0.1"
scrapy = "^2.8.0"
fake-useragent = "^1.1.1"
scrapyscript = "^1.1.5"
python-multipart = "^0.0.6"
openpyxl = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
